force-app/main/default/objects/Review_Request__c/Review_Request__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>Review Request</label><nameField><label>Request Name</label><type>Text</type></nameField><pluralLabel>Review Requests</pluralLabel><sharingModel>Private</sharingModel></CustomObject>