force-app/main/default/objects/Review_Request__c/fields/Amount__c.field-meta.xml
<CustomField><fullName>Amount__c</fullName><label>Amount</label><precision>12</precision><required>true</required><scale>2</scale><type>Number</type></CustomField>