force-app/main/default/objects/Review_Request__c/fields/Confirmed_Consent__c.field-meta.xml
<CustomField><fullName>Confirmed_Consent__c</fullName><defaultValue>false</defaultValue><label>Confirmed Consent</label><type>Checkbox</type></CustomField>