force-app/main/default/objects/Review_Request__c/fields/Correlation_Id__c.field-meta.xml
<CustomField><fullName>Correlation_Id__c</fullName><externalId>true</externalId><label>Correlation ID</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>