force-app/main/default/objects/Review_Request__c/fields/Sensitive_Notes__c.field-meta.xml
<CustomField><fullName>Sensitive_Notes__c</fullName><label>Synthetic Sensitive Notes</label><length>200</length><type>Text</type></CustomField>