force-app/main/default/objects/Review_Request__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>true</default><label>Pending</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Declined</fullName><default>false</default><label>Declined</label></value></valueSetDefinition></valueSet></CustomField>