force-app/main/default/objects/Review_Request__c/validationRules/Nonnegative_Amount.validationRule-meta.xml
<ValidationRule><fullName>Nonnegative_Amount</fullName><active>true</active><errorConditionFormula>Amount__c &lt; 0</errorConditionFormula><errorMessage>Amount must be nonnegative.</errorMessage></ValidationRule>